--- a/404.html
+++ b/404.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TapGas</title>
-    <link rel="manifest" href="/tapgas/manifest.json">
-    <link rel="icon" href="/tapgas/favicon.ico">
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body style="margin:0; padding:0;">
     <div id="root"></div>
