--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TapGas</title>
+    <title>GASMAN</title>
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body style="margin:0; padding:0;">
