done for some index chages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#0f172a" />
-  <meta name="description" content="Order LPG cylinders, track deliveries, and manage your profile. Offline-first PWA." />
+  <meta name="description" content="Order to Refill your LPG Gas Cylinders or Buy Cylinders, at the comfort of your home." />
   <title>Gasman</title>
   </head>
   <body>
